# roboime-tx

./: .cproject  .gitignore  .mxproject  .project  CMakeCache.txt  CMakeLists.txt  Debug_ARM7TDMI_FLASH.ld  Makefile  README.md  RoboIME-TX3.elf.launch  RoboIME-TX3.ioc  Toolchain-arm-none-eabi.cmake  USB+TX_unif_functions_WORKED_5.elf (1).launch  USB+TX_unif_functions_WORKED_5.elf.launch  cmake_install.cmake  defines.h  main.c  main.crf  main.d  misc.crf  misc.d  proj2.axf  proj2.build_log.htm  proj2.htm  proj2.lnp  proj2.map  proj2.uvguix.Victor Horta  proj2.uvguix_Victor Horta.bak  proj2.uvoptx  proj2.uvprojx  proj2_Target 1.dep  proj2_uvoptx.bak  proj2_uvprojx.bak  roboime-tx-v_gustavo.elf.launch  roboime-tx.elf.launch  roboime_fw_v1.0.elf  startup_stm32f40_41xxx.lst  stm32f4xx_exti.crf  stm32f4xx_exti.d  stm32f4xx_gpio.crf  (+43 more)
Debug/: RoboIME-TX3.elf  RoboIME-TX3.elf.list  RoboIME-TX3.map  RoboIME-TX5.elf  RoboIME-TX5.elf.list  RoboIME-TX5.map  USB+TX_unif_functions_WORKED_5.elf  USB+TX_unif_functions_WORKED_5.elf.list  USB+TX_unif_functions_WORKED_5.map  roboime-tx-v_gustavo.elf  roboime-tx-v_gustavo.elf.list  roboime-tx-v_gustavo.map  roboime-tx.elf  roboime-tx.elf.list  roboime-tx.map  usb_pure04.elf  usb_pure04.elf.list  usb_pure04.map
Debug/Libraries/: .gitignore
Inc/: GPIO.h  NRF24.h  my_spi.h  stm32f4xx_hal_conf.h  usbd_cdc_if.h
Libraries/nrf_lib/: CONFIG.cpp  CONFIG.h  NRF24.cpp  NRF24.h  NRF_REGISTER_MAP.cpp  NRF_REGISTER_MAP.h  REGISTER.cpp  SPI_interface.cpp  SPI_interface.h
RTE/: RTE_Components.h
Src/: GPIO.c  NRF24.c  main.c  main.cpp  my_spi.c  usb_device.c  usbd_cdc_if.c  usbd_conf.c
lib/nrf/: CONFIG.cpp  CONFIG.h  NRF24.cpp  NRF_REGISTER_MAP.cpp  REGISTER.cpp  SPI_interface.h
lib/usb_conf/: usb_bsp.c  usb_bsp.h  usb_conf.h  usbd_conf.h  usbd_desc.h
lib/usb_lib/cdc/: usbd_cdc_core.h  usbd_cdc_vcp.c  usbd_cdc_vcp.h
lib/usb_lib/core/: usbd_core.h  usbd_def.h  usbd_ioreq.h  usbd_req.h  usbd_usr.h
lib/usb_lib/otg/: usb_core.h  usb_dcd.h  usb_dcd_int.h  usb_defines.h  usb_regs.h
lib/utils/stm32f4_discovery/: stm32f4_discovery.h
src/: main.cpp  main.h
src/own_libraries/: CONFIG.cpp  CONFIG.h  NRF24.cpp  NRF24.h  NRF_REGISTER_MAP.cpp  NRF_REGISTER_MAP.h  REGISTER.cpp  REGISTER.h  SPI_interface.cpp  SPI_interface.h
